fix: modification des z-index pour affichage mobile

--- a/css/MV_Game_Elements.css
+++ b/css/MV_Game_Elements.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	height: 8.3vh; /* taille en px virtuels convertie en vh => taille_vh = 100 / (hauteur_jeu_px / taille_vaisseau_px)  */
 	width: 8.3vh;
-	z-index: 1;
+	z-index: 2;
 }
 .character .spinning-image {
     width: 100%;
@@ -25,7 +25,7 @@
 	position: absolute;
 	height: 10vh; /* taille en px virtuels convertie en vh => taille_vh = 100 / (hauteur_jeu_px / taille_vaisseau_px)  */
 	width: 10vh;
-	z-index: 1
+	z-index: 2;
 }
 .monster .spinning-image {
 	width: 100%;
@@ -48,7 +48,7 @@
 	height: 4vh;
 	background-size: contain;
   	background-repeat: no-repeat;
-	z-index: 0;
+	z-index: 1;
 }
 
 .fire {
